k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kubernetes-prometheus-stack
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
        alb.ingress.kubernetes.io/target-type: ip
spec:
    ingressClassName: alb
    rules:
        - http:
              paths:
                  - path: /prometheus
                    pathType: Prefix
                    backend:
                        service:
                            name: prometheus-operated
                            port:
                                number: 9090
                  - path: /grafana
                    pathType: Prefix
                    backend:
                        service:
                            name: monitoring-grafana
                            port:
                                number: 8080
                  - path: /alertmanager
                    pathType: Prefix
                    backend:
                        service:
                            name: alertmanager-operate
                            port:
                                number: 9093
